49
================

13/07/24 Improve mobile layout, add icons, reinstate add message #1505
12/07/24 Refactoring of locationfilter code to use encapsulated object
12/07/24 Include icons on mobile timeline
12/07/24 Disable mobile timeline when disabled on home page
11/07/24 Respect locationfilter/sites in mobile photo uploader
11/07/24 Respect locationfilter/sites for outstanding medicals in both mobile UIs
09/07/24 Hide shelter view modes that show person names if missing permission #1502
09/07/24 Bad reverse logic in publisher isCrossBreed
08/07/24 Defend against invalid remember me tokens
05/07/24 Add BroughtInByIDNumber and ReturnedByIDNumber #1493
05/07/24 FTP chdir did not work when reconnecting after a socket failure
03/07/24 csvimport: Copy current vet to neutering vet if neutereddate set #1492
03/07/24 Include weight next to the animal in the medical book #1498
03/07/24 Stop all lower/upper case triggering spambot behaviour
02/07/24 Replace &nbsp; in email headers when extracting from template
02/07/24 Hide visual aids when viewing signed documents #1491
02/07/24 Hide checkout button if template/paytype/method not set
02/07/24 Add ReturnedBy[AdditionalField] support to movement docs #1493
25/06/24 Bug: Bad reference to EntryTypeName in csvimport
22/06/24 Bug: sign document moving both copies to one record #1471
21/06/24 Rename and resurrect HelpingLostPets.com as PetFBI.org
20/06/24 Extra spambot protections to first name field (lcase/ucase/email)
19/06/24 Add audit fields to media table and update them correctly #1471
19/06/24 Add media.MediaSource column to identify how media was uploaded #1295
19/06/24 Audit the hash/signing of documents in linked records audit trail
19/06/24 Indicate in signing icon tooltip how the document was signed
18/06/24 Bug: online forms setting person dateofbirth to none every time
15/06/24 Bug: change user settings removing signature on subsequent saves
15/06/24 Bug: email address being blanked by chooser on options screen